--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <header>
     <nav class="nav-bar">
       <ul id="header-list">
-        <li class="nav-link"><a href="about.html"> About </a></li>
+        <li class="nav-link"><a href="https://hmagan.github.io/about.html"> About </a></li>
         <li class="nav-link"><a href="index.html"> Dashboard </a></li>
         <li class="nav-link"><a href="contact.html"> Contact </a></li>
       </ul>
