appended https://hmagan.github.io/ to html links

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <nav class="nav-bar">
       <ul id="header-list">
         <li class="nav-link"><a href="https://hmagan.github.io/about.html"> About </a></li>
-        <li class="nav-link"><a href="index.html"> Dashboard </a></li>
-        <li class="nav-link"><a href="contact.html"> Contact </a></li>
+        <li class="nav-link"><a href="https://hmagan.github.io/index.html"> Dashboard </a></li>
+        <li class="nav-link"><a href="https://hmagan.github.io/contact.html"> Contact </a></li>
       </ul>
     </nav>
   </header>
@@ -16,10 +16,10 @@
     <h4> Games, Tasks, and Tests </h4>
     <div id="grid-wrapper">
       <div id="grid">
-        <div class="tile"><a href="n-back.html">'n-back' Test</a></div>
-        <div class="tile"><a href="chimp.html">Chimp Test</a></div>
-        <div class="tile"><a href="simon.html">Simon Says</a></div>
-        <div class="tile"><a href="numbers.html">Number Memory</a></div>
+        <div class="tile"><a href="https://hmagan.github.io/n-back.html">'n-back' Test</a></div>
+        <div class="tile"><a href="https://hmagan.github.io/chimp.html">Chimp Test</a></div>
+        <div class="tile"><a href="https://hmagan.github.io/simon.html">Simon Says</a></div>
+        <div class="tile"><a href="https://hmagan.github.io/numbers.html">Number Memory</a></div>
       </div>
     </div>
   </body>
