--- a/simon.html
+++ b/simon.html
@@ -6,9 +6,9 @@
   <header>
     <nav class="nav-bar">
       <ul id="header-list">
-        <li class="nav-link"><a href="about.html"> About </a></li>
-        <li class="nav-link"><a href="index.html"> Dashboard </a></li>
-        <li class="nav-link"><a href="contact.html"> Contact </a></li>
+        <li class="nav-link"><a href="https://hmagan.github.io/about.html"> About </a></li>
+        <li class="nav-link"><a href="https://hmagan.github.io/index.html"> Dashboard </a></li>
+        <li class="nav-link"><a href="https://hmagan.github.io/contact.html"> Contact </a></li>
       </ul>
     </nav>
   </header>
