--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
             </ul>
         </div>
         <div class="divider"></div>
-        <h4 class="source" id="paper"><a href="https://docs.google.com/document/d/1GBXZ7MLU_j-e5MGxrv3QviG9XYTSolJGndlRs9v4-HQ/edit?usp=sharing" target="_blank">Link to the paper</a></h4>
+        <h4 class="source" id="paper"><a href="https://docs.google.com/document/d/1GBXZ7MLU_j-e5MGxrv3QviG9XYTSolJGndlRs9v4-HQ/edit?usp=sharing" target="_blank">Link to the paper</a> and <a href="https://github.com/hmagan/hmagan.github.io/" target="_blank">source code</a></h4>
     </div>
   </body>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
