Italicized + capitalized global context

--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
   <body>
     <h4> About </h4>
     <div id="about-body">
-        <p id="about-body"> This website is for my IB MYP Personal Project, focusing on scientific and technical innovation. It is designed to test the user's memory and cognitive abilities through a variety of tasks and tests. This website is completely made from scratch using jQuery/JavaScript in addition to HTML/CSS. It should be noted that if you are not using Chrome, there is a decent chance this site will not function properly. Below is a list of each game: </p>
+        <p id="about-body"> This website is for my IB MYP Personal Project, focusing on <i>Scientific and Technical Innovation</i>. It is designed to test the user's memory and cognitive abilities through a variety of tasks and tests. This website is completely made from scratch using jQuery/JavaScript in addition to HTML/CSS. It should be noted that if you are not using Chrome, there is a decent chance this site will not function properly. Below is a list of each game: </p>
         <div class="list-wrap">
             <ol id="games" class="list">
                 <li><b>The "Chimp" Test:</b> A test designed to evaluate a user's sequential memory. The name is inspired from a study conducted in which the test was performed by chimpanzees. They proved to excel at the test&#x2014;<a href="https://www.youtube.com/watch?v=zsXP8qeFF6A" target="_blank">can you beat them?</a></li>  
