--- a/n-back.html
+++ b/n-back.html
@@ -15,7 +15,7 @@
   <body>
     <div id="open-wrapper">
       <div id="opener">
-          <h2 id="n-opener">You will be presented with a visual stimulus. Simultaneously, an audio clip of a letter being spoken will be played. It is your job to say if either of the current stimuli match the ones <i>n</i> tests back, where n increases by one if you get all the tests correct and decreases by one if you get one wrong. If you think it does match, press the button or the spacebar to make your guess. You will know if you were right or not at the start of the next trial. These trials will come in waves of 16. Click <a href="https://en.wikipedia.org/wiki/N-back" target="_blank">here</a> for more information.</h2>
+          <h2 id="n-opener">You will be presented with a visual stimulus. Simultaneously, an audio clip of a letter being spoken will be played. It is your job to say if either of the current stimuli match the ones <i>n</i> tests back (n = 1 initially), where n increases by one if you get all the tests correct and decreases by one if you get one wrong. If you think it does match, press the button or the spacebar to make your guess. You will know if you were right or not at the start of the next trial. These trials will come in waves of 16. Click <a href="https://en.wikipedia.org/wiki/N-back" target="_blank">here</a> for more information.</h2>
           <div id="next"><p id="next-text"> &#8594; </p></div>
       </div>
     </div>
